# track4-optimizer

./: .env.example  .gitignore  README.md  WORKING.md  demo_report.html  portkey_routing_config.json  production_report.html  pyproject.toml  requirements.txt
data/: pricing.json
docs/: historical_prompts.json
scripts/: demo.py  generate_synthetic_data.py  production_demo.py  test_log_export.py  test_portkey.py
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  base.py  csv_adapter.py  historical_adapter.py  portkey_adapter.py  validation.py
src/analysis/: __init__.py  anomaly.py  pareto.py  recommendation.py  segmentation.py  statistics.py
src/api/: __init__.py  routes.py  schemas.py  visualization.py
src/db/: __init__.py  database.py  repositories.py
src/evaluation/: __init__.py  base.py  bertscore_evaluator.py  composite.py  cost_tracker.py  deepeval_evaluator.py  guardrails.py  self_consistency.py
src/models/: __init__.py  canonical.py  evaluation.py  recommendation.py
src/replay/: __init__.py  engine.py  model_registry.py  rate_limiter.py
tests/: conftest.py  test_adapters.py  test_analysis.py  test_evaluation.py  test_integration.py  test_replay.py
