[project]
name = "track4-optimizer"
version = "0.1.0"
description = "Cost-Quality Optimization via Historical Replay for LLM workloads"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
